Fixed a CSS issue so that the entire collapse panel header is clickable (to expand), rather than just the title or badge of the panel.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -211,3 +211,7 @@ body {
 .dropdown-menu li {
     cursor: pointer;
 }
+
+.panel-title {
+    display: block;
+}
